--- a/Omal/Views/ConfigurationV.xaml
+++ b/Omal/Views/ConfigurationV.xaml
@@ -6,24 +6,23 @@
     xmlns:CustomControls = "clr-namespace:Omal.CustomControls"
     Title="{Binding TitoloImpostazioni, Converter={StaticResource UpperCaseConverter}}"
     x:Class="Omal.Views.ConfigurationV" BackgroundColor="White">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
-    </ContentPage.ToolbarItems>
 	<ContentPage.Content>
     <StackLayout Margin="5">
             <ActivityIndicator IsRunning="{Binding IsRunning}" />
             <Grid BackgroundColor="White">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="2*" />
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
-                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Text="{Binding TitoloAggiornaCatalogo, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Titolo}" />
-                <Label Grid.Row="1" LineBreakMode="WordWrap" Text="{Binding LastUpdate}" Grid.Column="0" VerticalOptions="Center"  HorizontalOptions="EndAndExpand"/>
-                <Button Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center" Style="{StaticResource Azzurro}" Grid.Column="1" IsVisible="{Binding IsRunning, {Converter InverseBooleanConverter}" Command="{Binding UpdateDbCommand}" HorizontalOptions="EndAndExpand" Text="{Binding Aggiorna, Converter={StaticResource UpperCaseConverter}}" />
+                <Label Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="0" Text="{Binding TitoloAggiornaCatalogo, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Titolo}" />
+                <Label Grid.ColumnSpan="3" Grid.Row="1"  LineBreakMode="WordWrap" Text="{Binding LastUpdate}" Grid.Column="0" VerticalOptions="FillAndExpand"  HorizontalOptions="FillAndExpand"/>
+                <Button Grid.Row="2" VerticalOptions="Center" Style="{StaticResource Azzurro}" Grid.Column="1" IsVisible="{Binding IsRunning, {Converter InverseBooleanConverter}" Command="{Binding UpdateDbCommand}" HorizontalOptions="Fill" Text="{Binding Aggiorna, Converter={StaticResource UpperCaseConverter}}" />
             </Grid>
 <TableView Intent="Settings">
     <TableRoot>
