--- a/Omal/Views/OrdersV.xaml
+++ b/Omal/Views/OrdersV.xaml
@@ -27,7 +27,18 @@
                       ItemsSource="{Binding Ordini}" >
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding ClienteRagSoc}" Detail="{Binding DataInizio}" />
+                        <ViewCell>
+                                <Grid Margin="5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Label Grid.Row="0" Style="{StaticResource Titolo}" Text="{Binding ClienteRagSoc}" />
+                                <Label Grid.Row="1" Style="{StaticResource Descrizione}" Text="{Binding DataInizio}" />
+                                <Label Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" VerticalOptions="Center" TextColor="Red" Text="{Binding Stato}" HorizontalOptions="End" />
+                                </Grid>
+                            
+                        </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
             <ListView.Footer>
