--- a/Omal/Views/AnagraficheV.xaml
+++ b/Omal/Views/AnagraficheV.xaml
@@ -10,7 +10,7 @@
     </ContentPage.ToolbarItems>
   
         <RelativeLayout>
-    <Image IsVisible="{Binding IsLoggedIn}" Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3"
+    <Image IsVisible="{Binding IsLoggedIn}" Aspect="AspectFill" Source="IMG074428.png" Opacity="0.3"
                 RelativeLayout.WidthConstraint=
                   "{ConstraintExpression Type=RelativeToParent, Property=Width}"
                 RelativeLayout.HeightConstraint=
