--- a/Omal/Views/SearchV.xaml
+++ b/Omal/Views/SearchV.xaml
@@ -24,7 +24,7 @@
                 <CControls:CualevaPicker Margin="8" Title="{Binding ProdottoPicker3}" IsVisible="{Binding Picker3IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedTerzoLivello}" ItemsSource="{Binding TerzoLivello}" />
                 <Button Text="{Binding BtnCerca, Converter={StaticResource UpperCaseConverter}}" HorizontalOptions="Center"  Command="{Binding SearchWithCategoriesCommand }" Margin="0,10,0,50"/>
             </StackLayout>
-            <Image Grid.Row="1"  Aspect="AspectFill" Source="valvolaOMAL.png" Opacity="0.3" />
+            <Image Grid.Row="1"  Aspect="AspectFill" Source="IMG051428.png" Opacity="0.3" />
             <StackLayout  VerticalOptions="EndAndExpand" Grid.Row="1" Margin="0,0,0,0" BackgroundColor="Transparent"  Orientation="Vertical">
             <CControls:CualevaRoundedEntry Style="{StaticResource cerca}" Margin="30,5,30,5" BorderRadius="25" HeightRequest="50"   TextColor="White"  BackgroundColor="Transparent" Placeholder="{Binding ProdottoRicercato}" Text="{Binding ProductNameFilter, Mode=TwoWay}" />
                     
